--- a/package.json
+++ b/package.json
@@ -29,16 +29,14 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/throttler": "^5.1.2",
     "@prisma/client": "^5.9.1",
-    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
-    "nestjs-resend": "^0.0.3",
+    "google-auth-library": "^9.11.0",
     "openai": "^4.28.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
-    "randomatic": "^3.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.1"
