--- a/package.json
+++ b/package.json
@@ -29,12 +29,17 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/throttler": "^5.1.2",
     "@prisma/client": "^5.9.1",
+    "axios": "^1.7.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "google-auth-library": "^9.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
+    "jwt-decode": "^4.0.0",
     "openai": "^4.28.0",
     "passport": "^0.7.0",
+    "passport-apple": "^2.0.2",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
